--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "dependencies": {
     "express": "^4.17.1",
     "mysql": "^2.18.1",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "react": "^16.13.1"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   },
   "scripts": {
-
     "test": "echo \"Error: no test specified\" && exit 1",
     "backend": "nodemon -r dotenv/config server/app.js"
   },
